# dingcad

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  main.ts  main_assembly.ts  package-lock.json  package.json  prompt.md  puck.stl  run.sh  scene.js  server.cjs  tsconfig.json  your_model.stl
.github/workflows/: build-web.yml  ci.yml  update-test-results.yml
_/: .env  Makefile  README.md  setup-dev.sh
_/.github/workflows/: build-web.yml  pr-test-results.yml
_/config/: library-manifest.json
_/docs/: README.md  architecture.md  build-instructions.md  issues-fixed.md  pr-integration.md
_/scripts/: check-and-fix-workflow.sh  generate-library-manifest.sh  sync-fork-pr.sh
_/tests/: README.md  helpers.js
_/tests/integration/: test_complex_operations.js
_/tests/performance/: test_performance.js
_/tests/results/: README.md
_/tests/results/20251104_124438/: results.json  results.md
_/tests/results/20251104_124459/: results.json  results.md
_/tests/results/20251104_124841/: results.json  results.md
_/tests/results/latest/: results.json  results.md
_/tests/scenes/: test_scene_basic.js  test_scene_mechanical.js  test_scene_organic.js
_/tests/scripts/: generate_pr_message.sh  git_hook_pr_helper.sh  run_tests.sh  test_quick.sh  test_results_generation.sh  test_syntax.sh  verify_results_format.sh
_/tests/unit/: test_advanced_operations.js  test_boolean_operations.js  test_mesh_operations.js  test_primitives.js  test_transformations.js
_/web/: CMakeLists.txt  README.md  SETUP.md  index.html  quickjs_emscripten_compat.c  quickjs_emscripten_compat.h  simple.html  web_main.cpp
assemblies/: 4axisArray.js  SeeedCase.js  SleevedTripleAssembly.js  TripleSteppedPrism.js
docs/: ARCHITECTURE.md  GETTING_STARTED.md
manifold_lib/: credit.md  gltf-io.ts  worker.ts
manifold_lib/built/: manifold.js  manifold.wasm
parts/: colorgradient.ts  createGLTFNode.ts  cube.ts  curvedCone.ts  dingboxV0.ts  main_assembly.ts  pointedLeg.ts  quidditchHoopPlantHelper.ts
scripts/: install_matcaps.py
stls/: dingboxv0.stl  firstwall.stl
sympy/: triangles.py
tests/: CMakeLists.txt  js_bindings_geometry.cpp  js_bindings_operations.cpp  js_bindings_properties.cpp  js_bindings_smoke.cpp
viewer/: CMakeLists.txt  js_bindings.cpp  js_bindings.h  main.cpp  model_def.man  scene.js  version.h.in
web/: CMakeLists.txt  README.md  SETUP.md  index.html  simple.html  web_main.cpp
